--- a/app/src/main/res/layout/personaje.xml
+++ b/app/src/main/res/layout/personaje.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/imagenPersonaje"
+        android:layout_width="match_parent"
+        android:layout_height="96dp"
+        android:layout_gravity="center_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/android_oreo" />
 
     <TextView
-        android:id="@+id/personajeTexto"
-        android:text="@string/personaje"
-        android:textAllCaps="true"
-        android:textSize="45px"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal" />
+        android:id="@+id/personaje"
+        android:layout_width="104dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:text="TextView" />
 
-    <Spinner
-        android:id="@+id/spinner_personaje"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 </LinearLayout>
+
